# tcga-brca-gene-expression-prediction-

./: README.md  pyproject.toml  requirements.txt  spatial_heatmap.py
ckpt_multi_b2/: best_epoch=16_val_auroc=0.514.ckpt
nextflow/: nextflow.config  pipeline.nf
preds_cache_multi/: test_labels_gigapath.npy  test_labels_uni.npy  test_logits_b2.npy  test_logits_dino.npy  test_logits_dino3.npy  test_logits_gigapath.npy  test_logits_phikon.npy  test_logits_uni.npy  test_logits_virchow2.npy  thresholds.pkl  val_labels_uni.npy  val_labels_virchow2.npy  val_logits_b2.npy  val_logits_dino.npy  val_logits_dino3.npy  val_logits_gigapath.npy  val_logits_phikon.npy  val_logits_uni.npy  val_logits_virchow2.npy
