[project]
name = "tcga-brca-gene-expression-wsi"
version = "1.0.0"
description = "Gene expression prediction from breast cancer H&E whole slide images using pathology foundation models and TransformerMIL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    # Foundation model loading
    "timm>=1.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.20.0",
    # Data / ML
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "pyarrow>=12.0.0",
    # Visualisation
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Image processing
    "Pillow>=9.5.0",
    "openslide-python>=1.3.0",
    "torchstain>=1.3.0",
    # Utilities
    "tqdm>=4.65.0",
    "umap-learn>=0.5.3",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.uv]
package = false
